--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,6 @@ android {
     buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.example.helloworld"
-        minSdkVersion 25
-        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -17,6 +15,10 @@ android {
         }
     }
     productFlavors {
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 }
 
